force-app/main/default/objects/Framework_Settings__mdt/fields/Default_Batch_Size__c.field-meta.xml
<CustomField>
  <fullName>Default_Batch_Size__c</fullName>
  <label>Default Batch Size</label>
  <type>Number</type>
  <precision>4</precision>
  <scale>0</scale>
  <defaultValue>200</defaultValue>
</CustomField>