force-app/main/default/objects/Framework_Settings__mdt/fields/Max_Queue_Retries__c.field-meta.xml
<CustomField>
  <fullName>Max_Queue_Retries__c</fullName>
  <label>Max Queue Retries</label>
  <type>Number</type>
  <precision>3</precision>
  <scale>0</scale>
  <defaultValue>2</defaultValue>
</CustomField>