force-app/main/default/objects/Framework_Settings__mdt/fields/Retry_Backoff_Seconds__c.field-meta.xml
<CustomField>
  <fullName>Retry_Backoff_Seconds__c</fullName>
  <label>Retry Backoff (seconds)</label>
  <type>Number</type>
  <precision>5</precision>
  <scale>0</scale>
  <defaultValue>0</defaultValue>
</CustomField>